traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.7
          args:
            - --api.insecure
            - --entrypoints.web.address=:80
            - --providers.kubernetesingress=true
            - --log.level=DEBUG
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pool-dop-ykf46
                      - pool-dop-ykf4t
              topologyKey: "kubernetes.io/hostname"
