traefik.service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: traefik
#  namespace: kube-public
#
#spec:
#  externalTrafficPolicy: Local
#  type: LoadBalancer
#  ports:
#    - name: web
#      targetPort: 80
#      port: 80
#      protocol: TCP
#    - name: admin
#      targetPort: 8080
#      port: 8080
#      protocol: TCP
#  selector:
#    app: traefik
#---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public

spec:
  type: NodePort
  ports:
    - name: proxy
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30042
  selector:
    app: traefik
